--- a/page04.html
+++ b/page04.html
@@ -128,7 +128,8 @@ Your browser does not support the video tag.  </video>
 <div class="panel" id="infoPanel">
   <span class="close-btn" onclick="closePanel()">&times;</span>
   <h2>More Information</h2>
-  <p>All fruiting Karma arises from causes and conditions, and the nature of fruiting karma is unobtainable. If it is not available, it is empty. Therefore, all the Buddha’s teachings are ultimately empty. There is no permanence, no immutability. </p>
+  <p> All fruiting Karma arises from causes and conditions, and the nature of fruiting karma is unobtainable. </p>
+  <p> If it is not available, it is empty. Therefore, all the Buddha’s teachings are ultimately empty. There is no permanence, no immutability. </p>
 </div>
 </div>
   
