--- a/page05.html
+++ b/page05.html
@@ -1,7 +1,10 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <style>
   body, html {
     margin: 0;
@@ -14,13 +17,6 @@
   }
 
   .video-container {
-    position: relative;
-    width: 80%;
-    max-width: 800px;
-    height: auto;
-  }
-
-  video-container {
     position: relative;
     width: 80%;
     max-width: 800px;
@@ -60,7 +56,7 @@
 
  .button {
   padding: 10px 20px;
-  font-size: 20px;
+  font-size: 16px;
   cursor: pointer;
   text-align: center;
   text-decoration: none;
