--- a/page05.html
+++ b/page05.html
@@ -75,6 +75,16 @@
   box-shadow: 0 5px #666;
 }
 
+.button-container {
+    position: absolute;
+    bottom: 50%; /* Center it vertically */
+    left: 50%;
+    transform: translate(-50%, 50%); /* Center horizontally and vertically */
+    display: flex;
+    gap: 10px; /* Space between buttons */
+    z-index: 1;
+  }
+
 /* Panel Styling */
 .panel {
   position: fixed;
