--- a/page05.html
+++ b/page05.html
@@ -131,7 +131,7 @@
 </video>
 
 <div class="button-container">
-    <a href="./page01.html"><button class="button">I understand</button></a>
+    <a href="./page01.html"><button class="button">Next</button></a>
     <button class="button" onclick="openPanel()">Learn More</button>
 </div>
   </div>
@@ -140,7 +140,8 @@
 <div class="panel" id="infoPanel">
   <span class="close-btn" onclick="closePanel()">&times;</span>
   <h2>More Information</h2>
-  <p>This panel provides additional details about the content. It slides in from the right when you click "Learn More."</p>
+  <p>Various organizations are formed based on many conditions and cannot survive alone.</p>
+  <p>Since they are born from the combination of many conditions, they are insubstantial and their nature is inherently empty.</p>
 </div>
 
 <script>
