--- a/page06.html
+++ b/page06.html
@@ -99,7 +99,7 @@
 
 
 <div class="container">
-<a href="./page07.html" target="ENTER">
+<a href="./page07.html">
   <img src="./asset/Temple 03.png" alt="Temple 03" style="width:100%">
   <button class="btn">ENTER</button>
 </div>
