--- a/page07.html
+++ b/page07.html
@@ -169,7 +169,7 @@
 </div>
 
 <button class="button" onclick="spin()">Spin</button>
-<a href="./page01.html" target="page01" title="Exit">Exit</a>
+<a href="./page08.html">next</a>
 
 <script>
   function spin() {
