--- a/page08.html
+++ b/page08.html
@@ -185,6 +185,6 @@
         }
     </script>
     <a href="./page01.html" target="page01">
-    <button class="button">I understand.</button>
+    <button class="button">Next</button>
 </body>
 </html>
