--- a/page08.html
+++ b/page08.html
@@ -184,7 +184,7 @@
             treeAudio.play();
         }
     </script>
-    <a href="./page01.html" target="page01">
+    <a href="./page09.html">
     <button class="button">Next</button>
 </body>
 </html>
