--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 }
 
 .pushable {
-    background: hsl(120, 100%, 14%);
+    background: hsl(0, 0%, 20%);
     border-radius: 12px;
     margin-top: 40px;
     border: none;
@@ -86,7 +86,7 @@
     padding: 12px 42px;
     border-radius: 12px;
     font-size: 1.25rem;
-    background: hsl(125 100% 29%);
+    background: hsl(0  0% 40%);
     color: white;
     transform: translateY(-6px);
 }
@@ -108,10 +108,10 @@
   </div>
   <div class="popup" id="popup">
     <h2>Welcome!</h2>
-    <p>123</p>
+    <p>Before entering, please keep a calm and pious heart.</p>
     <button class="pushable" onclick="closePopup()">
       <span class="front">
-          OK
+          I am ready!
       </span>
     </button>
 </div>
