--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
     <button class="button button2" onclick="window.location.href='./page00.html'"type="about">ABOUT</button>
   </div>
   <div class="popup" id="popup">
+    <img src="./asset/popup.png" alt="width="200px" height="200px"">
     <h2>Welcome!</h2>
     <p>Before entering, please keep a calm and pious heart.</p>
     <button class="pushable" onclick="closePopup()">
