--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <button class="button button2" onclick="window.location.href='./page00.html'"type="about">ABOUT</button>
   </div>
   <div class="popup" id="popup">
-    <img src="./asset/popup.png" alt="" width="50px" height="50px">
+    <img src="./asset/popup.png" alt="" width="30px" height="30px">
     <h2>Welcome!</h2>
     <p>Before entering, please keep a calm and pious heart.</p>
     <button class="pushable" onclick="closePopup()">
@@ -119,13 +119,14 @@
 </div>
 
 <script>
-  let popup = document.getElementById("popup")
+  let popup = document.getElementById("popup");
 
   function openPopup() {
-    popup.classList.add("openPopup")
+    popup.classList.add("openPopup");
   }
   function closePopup() {
-    popup.classList.remove("openPopup")
+    popup.classList.remove("openPopup");
+    window.location.href = './pagep1.html';
   }
 </script>
 </body>
