--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   }
   function closePopup() {
     popup.classList.remove("openPopup");
-    window.location.href = './pagep1.html';
+    window.location.href = './page01.html';
   }
 </script>
 </body>
