--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <button class="button button2" onclick="window.location.href='./page00.html'"type="about">ABOUT</button>
   </div>
   <div class="popup" id="popup">
-    <img src="./asset/popup.png" alt="Popup Icon" class="popup-image">
+    <img src="./asset/popup-1.png" alt="Popup Icon" class="popup-image">
     <h2>Welcome!</h2>
     <p>Before entering, please keep a calm and pious heart.</p>
     <button class="pushable" onclick="closePopup()">
