--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 }
 
 .popup-image{
-  width: 30px;
-  height: 30px;
+  width: 10px;
+  height: 10px;
 }
 
 .openPopup {
@@ -113,7 +113,7 @@
   </div>
   <div class="popup" id="popup">
     <img src="./asset/popup-1.png" alt="Popup Icon" class="popup-image">
-    <h2>Welcome!</h2>
+    <h2>Welcome</h2>
     <p>Before entering, please keep a calm and pious heart.</p>
     <button class="pushable" onclick="closePopup()">
       <span class="front">
