--- a/page01.html
+++ b/page01.html
@@ -88,6 +88,7 @@
     <h2>I am Guan Yin</h2>
     <p>While deeply immersed in Prajna Paramita, clearly perceived the empty nature of the five skandhas, And transcended all suffering.</p>
     <p>If you need my help, you must have enough blessings, good intentional action, and always be kind. Practice asceticism and you will attain the goal.</p>
+    <p>Start the task from No.1.</p>
   </div>
 </div>
 
