--- a/page09.html
+++ b/page09.html
@@ -118,7 +118,7 @@ button:active {
 <!-- Exit Button -->
  <br>
     <p>May the merits of our deeds reach every part of the world!</p>
-    <a href="./index.html">
+    <a href="./end.html" target="end">
         <button class="button exit" onclick="playAudio();">Exit</button>
     </a>
 </div>
