--- a/end.html
+++ b/end.html
@@ -27,13 +27,12 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center;
-  border-radius: 12px; /* Optional: rounded corners for the square */
 }
 
 .nirvana-image {
   position: absolute;
-  top: -40px; /* Adjust position as needed */
-  width: 80px; /* Adjust width as needed */
+  top: 50%; /* Adjust position as needed */
+  width: 100px; /* Adjust width as needed */
   height: auto;
 }
 
