--- a/page09.html
+++ b/page09.html
@@ -86,6 +86,63 @@ button:active {
     box-shadow: 0 5px #666; 
 }
 
+.popup {
+    width: 400px;
+    background: #fff;
+    border-radius: 6px;
+    position: absolute;
+    top: 0%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0.1);
+    text-align: center;
+    padding: 0 30px 30px;
+    visibility: hidden;
+    transition: transform 0.5s, top 0.5s;
+}
+
+.popup-image{
+  width: 100%;
+  height: auto;
+  max-width:150px;
+}
+
+.openPopup {
+    top: 50%;
+    visibility: visible;
+    transform: translate(-50%, -50%) scale(1);
+} 
+
+.popup h2{
+  font-size: 30px;
+  font-weight: 500;
+  margin: 10px 0 px;
+}
+
+.pushable {
+    background: hsl(0, 0%, 20%);
+    border-radius: 12px;
+    margin-top: 40px;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    outline-offset: 4px;
+}
+
+.front {
+    display: block;
+    padding: 12px 42px;
+    border-radius: 12px;
+    font-size: 1.25rem;
+    background: hsl(0  0% 40%);
+    color: white;
+    transform: translateY(-6px);
+}
+
+.pushable:active .front {
+    transform: translateY(-2px);
+}
+
+
 </style>
 </head>
 
