--- a/page09.html
+++ b/page09.html
@@ -326,7 +326,7 @@ function clearmove() {
 <div class="popup" id="popup">
     <img src="./asset/popup-1.png" alt="Popup Icon" class="popup-image">
     <h2>Congradulate</h2>
-    <p>Your tasks are all done.</p>
+    <p>Your tasks are all done, may your wish come true!</p>
     <button class="pushable" onclick="closePopup()">
       <span class="front">
           Restart!
