--- a/page09.html
+++ b/page09.html
@@ -176,7 +176,7 @@ button:active {
  <br>
     <p>May the merits of our deeds reach every part of the world!</p>
     <a href="./end.html" target="_blank">
-        <button class="button exit" onclick="playAudio();">Exit</button>
+        <button class="button exit" onclick="playAudio();" onclick="openPopup()">Exit</button>
     </a>
 </div>
 
