--- a/page09.html
+++ b/page09.html
@@ -154,7 +154,7 @@ button:active {
 
 <!-- Popup -->
 <div class="popup" id="popup">
-    <img src="./asset/popup-1.png" alt="Popup Icon" class="popup-image">
+    <img src="./asset/nirvana.png" alt="Popup Icon" class="popup-image">
     <h2>Congratulations</h2>
     <p>Your tasks are all done, may your wish come true!</p>
     <button class="pushable" onclick="closePopup()">
