--- a/page00.html
+++ b/page00.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link href="./assets/nirvana.png" rel="icon">
 <style> 
 .fixed-bg {
   background-image: url("./asset/window.png");
