--- a/page06.html
+++ b/page06.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="./assets/nirvana.png" rel="icon">
 <style> 
 .fixed-bg {
   background-image: url('./asset/Temple 04.png');
