--- a/page08.html
+++ b/page08.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-        body, html {
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="./assets/nirvana.png" rel="icon">
+
+<style>
+body, html {
             margin: 0;
             padding: 0;
             height: 100%;
