--- a/page09.html
+++ b/page09.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="./assets/nirvana.png" rel="icon">
 <style>
 body {
     margin: 25px;
