--- a/page07.html
+++ b/page07.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="./assets/nirvana.png" rel="icon">
+<link href="./asset/nirvana.png" rel="icon">
 <style>
   body {
     text-align: center;
