--- a/page01.html
+++ b/page01.html
@@ -97,28 +97,23 @@
 <div class="image-grid">
   <div class="column">
     <a href="./page04.html">
-      <img src="./asset/pineapple.png" alt="pineapple"><p>1. Form</p>
-    </a>
+      <img src="./asset/pineapple-1.png" alt="pineapple"></a>
   </div>
   <div class="column">
     <a href="./page05.html">
-      <img src="./asset/apple.png" alt="apple"><p>2. Feeling</p>
-    </a>
+      <img src="./asset/apple-1.png" alt="apple"></a>
   </div>
   <div class="column">
     <a href="./page06.html">
-      <img src="./asset/pear.png" alt="pear"><p>3. Conception</p>
-    </a>
+      <img src="./asset/pear-1.png" alt="pear"></a>
   </div>
   <div class="column">
     <a href="./page08.html">
-      <img src="./asset/orange.png" alt="orange"><p>4. Volition</p>
-    </a>
+      <img src="./asset/orange-1.png" alt="orange"></a>
   </div>
   <div class="column">
     <a href="./page09.html">
-      <img src="./asset/papaya.png" alt="papaya"><p>5. Consciousness</p>
-    </a>
+      <img src="./asset/papaya-1.png" alt="papaya"></a>
   </div>
 </div>
 </body>
