--- a/page04.html
+++ b/page04.html
@@ -115,7 +115,7 @@ body, html{
 
 
 <div class="container">
-  <img src="./asset/meditation.png" alt="Background Image" class="background-image">
+  <img src="./asset/meditation-01.png" alt="Background Image" class="background-image">
 <video class="overlay-video" controls>
 <source src="./waterfall-1.mp4" type="video/mp4">
 Your browser does not support the video tag.  </video>
