--- a/page05.html
+++ b/page05.html
@@ -14,6 +14,7 @@
     align-items: center;
     justify-content: center;
     background-color: black;
+    font-family: krungthep;
   }
 
   .video-container {
