--- a/page01.html
+++ b/page01.html
@@ -36,7 +36,7 @@
   background-color: #f8f9fa;
   overflow-y: auto;
   border-left: 2px solid #ddd;
-  font-family: Arial, sans-serif;
+  font-family: krungthep;
   height: auto;
 }
 
