--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@
 
 .popup h2{
   font-size: 30px;
-  font-weight: 500;
+  font-weight: 600;
   margin: 10px 0 px;
+  font-family: krungthep;
 }
 
 .pushable {
@@ -96,6 +97,7 @@
     background: hsl(0  0% 40%);
     color: white;
     transform: translateY(-6px);
+    font-family: krungthep;
 }
 
 .pushable:active .front {
