--- a/page05.html
+++ b/page05.html
@@ -31,7 +31,7 @@
 
   .text-overlay {
     position: absolute;
-    top: 0;
+    top: 5%;
     left: 50%;
     transform: translateX(-50%);
     width: 100%;
