--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 .button-container button {
   padding: 16px 32px;
   font-size: 16px;
+  font-family: krungthep;
   cursor: pointer;
   text-align: center;
   text-decoration: none;
