--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
   font-family: krungthep;
 }
 
+.popup p{
+ font-family: krungthep;
+}
+  
+
 .pushable {
     background: hsl(0, 0%, 20%);
     border-radius: 12px;
