--- a/page04.html
+++ b/page04.html
@@ -51,6 +51,7 @@ body, html{
 .button {
   padding: 10px 20px;
   font-size: 16px;
+  font-family: krungthep;
   cursor: pointer;
   text-align: center;
   text-decoration: none;
