--- a/page05.html
+++ b/page05.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -58,6 +57,7 @@
  .button {
   padding: 10px 20px;
   font-size: 16px;
+  font-family: krungthep;
   cursor: pointer;
   text-align: center;
   text-decoration: none;
