--- a/page06.html
+++ b/page06.html
@@ -16,7 +16,7 @@
 
 .centered-paragraph {
   text-align: center;
-  font-family:'Times', Courier, monospace;
+  font-family: krungthep;
   font-size: 20px;
   margin: 20px;
   color: black;
@@ -69,7 +69,6 @@
   box-sizing: border-box;
 }
 
-
 .container .btn {
   position: absolute;
   top: 65%;
@@ -79,6 +78,7 @@
   background-color: black;
   padding: 10px 20px;
   font-size: 16px;
+  font-family: krungthep;
   cursor: pointer;
   text-align: center;
   color:white;
