--- a/page07.html
+++ b/page07.html
@@ -7,7 +7,7 @@
 <style>
   body {
     text-align: center;
-    font-family: Times, sans-serif;
+    font-family: krungthep;
     font-size: 20px;
     margin: 0;
     display: flex;
@@ -79,6 +79,7 @@
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+    font-family: krungthep;
     margin: 20px auto;
     cursor: pointer;
     border-radius: 5px;
