--- a/page07.html
+++ b/page07.html
@@ -16,9 +16,18 @@
     align-items: center; /*center horizontally*/
   }
 
-  h2, p {
+  h2 {
     margin: 0 auto;
     text-align: center;
+    color: black;
+    font-size: 18px;
+  }
+  
+  p {
+    margin: 0 auto;
+    text-align: center;
+    color: dark grey;
+    font-size: 12px
   }
 
   img.stove {
