--- a/page08.html
+++ b/page08.html
@@ -11,6 +11,7 @@ body, html {
             padding: 0;
             height: 100%;
             width: 100%;
+            font-family: krungthep;
         }
 
         .container {
@@ -96,6 +97,7 @@ body, html {
         display: inline-block;
         padding: 10px 20px;
         font-size: 20px;
+        font-family: krungthep;
         cursor: pointer;
         text-align: center;
         text-decoration: none;
