--- a/page08.html
+++ b/page08.html
@@ -124,7 +124,7 @@ body, html {
     <div class="container">
         <!-- Group for Word Image and its Card -->
         <div class="image-card-group">
-            <img src="./asset/word.png" alt="word" onclick="playWordAudio();">
+            <img src="./asset/word-01.png" alt="word" onclick="playWordAudio();">
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
