--- a/page09.html
+++ b/page09.html
@@ -7,7 +7,7 @@
 <style>
 body {
     margin: 25px;
-    font-family: Arial, sans-serif;
+    font-family: krungthep;
 }
 
 div.polaroid {
@@ -35,6 +35,7 @@ img {
 header {
     text-align: center;
     font-size: 36px;
+    font-family: krungthep;
     color: #333;
     margin-top: 10px;
     font-weight: bold;
@@ -51,6 +52,7 @@ button {
   display: inline-block;
   padding: 10px 18px;
   font-size: 18px;
+  font-family: krungthep;
   cursor: pointer;
   color: #fff;
   background-color: black;
@@ -103,7 +105,13 @@ button:active {
 .popup h2 {
   font-size: 30px;
   font-weight: 500;
+  font-family: krungthep;
   margin: 10px 0;
+}
+
+.popup p {
+ font-family: krungthep;
+ font-size: 14px;
 }
 
 .pushable {
