--- a/page07.html
+++ b/page07.html
@@ -182,7 +182,7 @@
 </div>
 
 <button class="button" onclick="spin()">Spin</button>
-<a href="./page08.html">Next</a>
+<a href="./page08.html">Exit</a>
 
 <script>
   function spin() {
