--- a/page00.html
+++ b/page00.html
@@ -64,10 +64,7 @@ div {text-align: center;}
 
 <div style="background-color:white;"><h2>Instruction</h2></div>
 <p>The goal of the experience is to reach Nirvana by understanding that form, feeling, perception, volition, and consciousness are all empty. This realization enables us to transcend suffering. While suffering is a part of every life, Nirvana—the end of suffering—is attainable for all.</p>
-
-<img src="./asset/instruction-1.png" alt="instruction" class="image"></div>
-<br>
-<a href="./index.html" target="index">
+<a href="./index.html">
 <button class="button">Back</button>
 
 
