--- a/page00.html
+++ b/page00.html
@@ -28,6 +28,7 @@ div {text-align: center;}
 .button {
         position: absolute;
         left: 50%;
+        bottom: 10px;
         transform: translateX(-50%);
         display: inline-block;
         padding: 16px 32px;
