--- a/page00.html
+++ b/page00.html
@@ -26,18 +26,23 @@ div {text-align: center;}
   height: auto;
 }
 .button {
-  padding: 10px 20px;
-  font-size: 16px;
-  font-family: krungthep;
-  cursor: pointer;
-  text-align: center;
-  text-decoration: none;
-  font-weight: bold;
-  color: white;
-  background-color: black;
-  border: none;
-  border-radius: 15px;
-  box-shadow: 0 9px #666;
+  position: absolute;
+        left: 50%;
+        top: 85px; /* Adjust this value as needed */
+        transform: translateX(-50%);
+        display: inline-block;
+        padding: 16px 32px;
+        font-size: 16px;
+        cursor: pointer;
+        text-align: center;
+        text-decoration: none;
+        font-weight: bold;
+        outline: none;
+        color: white;
+        background-color: black;
+        border: none;
+        border-radius: 15px;
+        box-shadow: 0 9px #666;
 }
         .button:hover {background-color: #AE2C2B;}
 
