--- a/page00.html
+++ b/page00.html
@@ -28,7 +28,7 @@ div {text-align: center;}
 .button {
   position: absolute;
         left: 50%;
-        top: 85px; /* Adjust this value as needed */
+        bottom: 15px; /* Adjust this value as needed */
         transform: translateX(-50%);
         display: inline-block;
         padding: 16px 32px;
