--- a/page01.html
+++ b/page01.html
@@ -115,5 +115,12 @@
       <img src="./asset/fruit05.png" alt="papaya"></a>
   </div>
 </div>
+
+<audio controls autoplay>
+  <source src="1.ogg" type="audio/ogg">
+  <source src="1.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+
 </body>
 </html>
