--- a/page01.html
+++ b/page01.html
@@ -117,8 +117,8 @@
 </div>
 
 <audio controls autoplay>
-  <source src="1.ogg" type="audio/ogg">
-  <source src="1.mp3" type="audio/mpeg">
+  <source src="1-1.ogg" type="audio/ogg">
+  <source src="1-1.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
 
