--- a/page01.html
+++ b/page01.html
@@ -114,11 +114,10 @@
     <a href="./page09.html">
       <img src="./asset/fruit05.png" alt="papaya"></a>
   </div>
+</div>
 <audio controls autoplay>
-  <source src="guanyin.mp3" type="audio/mpeg">
+  <source src="guanyin.mp3" type="audio/mp3">
   Your browser does not support the audio element.
 </audio>
-
-</div>
 </body>
 </html>
