--- a/page04.html
+++ b/page04.html
@@ -110,7 +110,7 @@ body, html{
 Your browser does not support the video tag.  </video>
 
 <div class="button-container">
-    <a href="./page05.html"><button class="button">Next</button></a>
+    <a href="./page01-1.html"><button class="button">Offering</button></a>
     <button class="button" onclick="openPanel()">Learn More</button>
   </div>
 <!-- Sliding Panel -->
