--- a/page05.html
+++ b/page05.html
@@ -132,7 +132,7 @@
 </video>
 
 <div class="button-container">
-    <a href="./page06.html"><button class="button">Next</button></a>
+    <a href="./page01-2.html"><button class="button">Offering</button></a>
     <button class="button" onclick="openPanel()">Learn More</button>
 </div>
   </div>
