--- a/page01.html
+++ b/page01.html
@@ -116,7 +116,7 @@ audio {
   </div>
 </div>
 <audio controls autoplay>
-  <source src="./audio/guanyin.mp3" type="audio/mp3">
+  <source src="./audio/guanyin-1.mp3" type="audio/mp3">
   Your browser does not support the audio element.
 </audio>
 </body>
