--- a/page05.html
+++ b/page05.html
@@ -114,9 +114,15 @@
   color: white;
 }
 
+.h2{
+text-size: 24px;
+font-family: "Krungthep";
+}
+
 </style>
 </head>
 <body>
+<h2>"Feeling"</h2>
 
 <div class="video-container">
 <div class="text-overlay">
