--- a/page07.html
+++ b/page07.html
@@ -268,6 +268,10 @@
   </div>
 </div>
 </div>
+<audio controls autoplay>
+  <source src="./audio/fear.mp3" type="audio/mp3">
+  Your browser does not support the audio element.
+</audio>
 
 </body>
 </html>
