--- a/page07.html
+++ b/page07.html
@@ -163,7 +163,7 @@ audio {
 <br>
 
 <h2>Calm down, you shall know my words.</h2>
-<p> If you spin 3 poes in yes (one in red, and another in grey), we can continue to the next section. <br>If not, press "Exit". Today is not a good time to have a conversation.</p>
+<p> If you spin 3 poes in yes (one in red, and another in grey), we can continue to the next section. <br>If not, press "offering". Today is not a good time to have a conversation.</p>
 
 <div class="poe">
   <div class="set" id="set1">
@@ -186,7 +186,7 @@ audio {
 </div>
 
 <button class="button" onclick="spin()">Spin</button>
-<a href="./page08.html">Exit</a>
+<a href="./page01-3.html">Offering</a>
 
 <script>
   function spin() {
@@ -218,7 +218,6 @@ audio {
 <br>
 <br>
 <h2>Please flip a card that you feel the most connection with.</h2>
-<p>View the result with an open mind, to avoid unnecessary anxiety.</p>
 
 <div class="flip-card-container">
 <div class="flip-card">
