--- a/page08.html
+++ b/page08.html
@@ -96,7 +96,7 @@ body, html {
         transform: translateX(-50%);
         display: inline-block;
         padding: 10px 20px;
-        font-size: 14px;
+        font-size: 20px;
         font-family: krungthep;
         cursor: pointer;
         text-align: center;
@@ -116,6 +116,10 @@ body, html {
         background-color: skyblue;
         box-shadow: 0 5px #666;
         transform: translateX(-50%);
+        }
+
+        .p{
+         text-size: 14px;
         }
 
     </style>
