--- a/page08.html
+++ b/page08.html
@@ -118,9 +118,12 @@ body, html {
         transform: translateX(-50%);
         }
 
-        .p{
-         text-size: 14px;
-        }
+        .flip-card-back p {
+    font-size: 14px;  /* Adjust text size here */
+    color: white;
+    padding: 10px;
+    text-align: center;
+}
 
     </style>
 </head>
