--- a/page08.html
+++ b/page08.html
@@ -153,8 +153,8 @@ body, html {
                         <img src="./asset/buddha.png" alt="buddha" style="width:200px;height:220px;">
                     </div>
                     <div class="flip-card-back">
-                        <div class="text-overlay"><i>Kamma</i> is the cause, not the effect. <p>Wise attention will allow you to do good <i>Kamma</i>.</p>
-                        <p> Forests nourishing creatures, respecting lives is very important.</p> </div>
+                        <div class="text-overlay"><p>Forests nourishing creatures, respecting lives are very important. Wise attention will allow you to do good <i>Kamma</i>.</p>
+                        </div>
                     </div>
                 </div>
             </div>
