--- a/page08.html
+++ b/page08.html
@@ -169,7 +169,7 @@ body, html {
                         <img src="./asset/buddha.png" alt="buddha" style="width:200px;height:220px;">
                     </div>
                     <div class="flip-card-back">
-                        <div class="text-overlay"><p>Unwise attention will cause you to do bad <i>kamma</i>.<p> The future results or fruit will depend on your volition, in the present.</p><p>Disrepecting lives would get bad results.</p>
+                        <div class="text-overlay"><p>Disrepecting lives would get bad results. Unwise attention will cause you to do bad <i>kamma</i>.</p>
                     </div>
                 </div>
             </div>
