--- a/page08.html
+++ b/page08.html
@@ -195,7 +195,7 @@ body, html {
             treeAudio.play();
         }
     </script>
-    <a href="./page09.html">
-    <button class="button">Next</button>
+    <a href="./page01-4.html">
+    <button class="button">offering</button>
 </body>
 </html>
