--- a/page09.html
+++ b/page09.html
@@ -160,7 +160,7 @@ button:active {
 
   <br>
   <p>May the merits of our deeds reach every part of the world!</p>
-  <button class="button exit" onclick="openPopup()">Exit</button>
+  <button class="button exit" onclick="openPopup()">Offering</button>
 </div>
 
 <!-- Popup -->
