--- a/page05.html
+++ b/page05.html
@@ -42,7 +42,7 @@
 
   .text-overlay {
     position: absolute;
-    top: 20%; /* Adjust this value to control the position of the text overlay */
+    top: -10%%; /* Adjust this value to control the position of the text overlay */
     left: 50%;
     transform: translateX(-50%);
     width: 100%;
