--- a/page07.html
+++ b/page07.html
@@ -154,6 +154,7 @@ audio {
 </head>
 <body>
 
+<h2>"Conception"</h2>
 <h2>The bodhisattva’s mind is free from hindrances</h2>
 <p>With no hindrances, there is no fear.</p>
 
@@ -161,7 +162,6 @@ audio {
 <img src="./asset/stove.png" alt="Stove" class="stove" onclick="playAudio();">
 
 <br>
-
 <h2>Calm down, you shall know my words.</h2>
 <p> If you spin 3 poes in yes (one in red, and another in grey), we can continue to the next section. <br>If not, press "offering". Today is not a good time to have a conversation.</p>
 
