--- a/page07.html
+++ b/page07.html
@@ -156,7 +156,7 @@ audio {
 
 <h2>"Conception"</h2>
 <br>
-<h2>The bodhisattva’s mind is free from hindrances</h2>
+<p>The bodhisattva’s mind is free from hindrances</p>
 <p>With no hindrances, there is no fear.</p>
 
 <!-- Add onclick event to call playAudio() -->
