--- a/page08.html
+++ b/page08.html
@@ -22,7 +22,7 @@ body, html {
             padding: 80px;
             box-sizing: border-box;
             width: 100%;
-            background-image: url('./asset/volition.png') ;
+            background-image: url('./asset/volition-1.png') ;
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
