--- a/page08.html
+++ b/page08.html
@@ -24,7 +24,7 @@ body, html {
             width: 100%;
             background-image: url('./asset/volition-1.png') ;
             background-size: cover;
-            background-position: center bottom;
+            background-position: center 20%;
             background-repeat: no-repeat;
         }
 
