--- a/page09.html
+++ b/page09.html
@@ -137,6 +137,10 @@ button:active {
 .pushable:active .front {
     transform: translateY(-2px);
 }
+
+audio {
+  display: none;
+}
 </style>
 </head>
 
