--- a/page09.html
+++ b/page09.html
@@ -27,6 +27,10 @@ div.polaroid {
     padding: 10px 20px;
 }
 
+.container p {
+    font-size:14px;
+}
+
 img {
     display: block;
     margin: 0 auto;
