--- a/page09.html
+++ b/page09.html
@@ -176,7 +176,8 @@ audio {
 <div class="popup" id="popup">
     <img src="./asset/nirvana.png" alt="Popup Icon" class="popup-image">
     <h2>Congratulations</h2>
-    <p>Your tasks are all done, may your wish come true!</p>
+    <p>Freed from all distortion and delusion,</p>
+    <p>Ultimate nirvana is reached.</p>
     <button class="pushable" onclick="closePopup()">
       <span class="front">Restart!</span>
     </button>
