--- a/index.html
+++ b/index.html
@@ -124,7 +124,9 @@
   <div class="popup" id="popup">
     <img src="./asset/popup-1.png" alt="Popup Icon" class="popup-image">
     <h2>Welcome</h2>
-    <p>Before entering, please keep a calm and pious heart.</p>
+    <p> To the virtual Taiwanese temple.</p>
+    <p> Please keep a calm and pious heart before entering!</p>
+    <p></p>
     <button class="pushable" onclick="closePopup()">
       <span class="front">
           I am ready!
